# fmod

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.cmd  libcheck.cmd  update-git.cmd
cmake/: fmod-config.cmake.in  fmod_install.cmake  test.cmake
docs/: index.html
exmaple/: CMakeLists.txt  main.cpp  sample_linux.cpp  sample_win32.cpp
srcs/: main.cpp
